--- a/app/globals.css
+++ b/app/globals.css
@@ -1,12 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@100&display=swap');
 
 html {
    margin: 0px;
    height: 100%;
    width: 100%;
    background-color: black;
+   font-family: 'Libre Franklin', sans-serif;
 }
 
 body {
