--- a/app/globals.css
+++ b/app/globals.css
@@ -104,63 +104,27 @@ body {
    font-weight: 300;
  }
  
- .wave {
-   position: absolute;
-   top: -100px;
-   left: 0;
-   width: 100%;
-   height: 100px;
-   background: url("../public/wave.png");
-   background-size: 1000px 100px;
- }
- .wave{
-   color:#1a2e44;
- }
- .wave#wave1 {
-   color:#1a2e44;
-   z-index: 10;
-   opacity: 1;
-   bottom: 0;
-   animation: animateWaves 4s linear infinite;
- }
- 
- .wave#wave2 {
-   color:#1a2e44;
-   z-index: 9;
-   opacity: 0.5;
-   bottom: 10px;
-   animation: animate 4s linear infinite !important;
- }
- 
- .wave#wave3 {
-   color:#1a2e44;
-   z-index: 10;
-   opacity: 0.2;
-   bottom: 15px;
-   animation: animateWaves 3s linear infinite;
- }
- 
- .wave#wave4 {
-   color:#1a2e44;
-   z-index: 9;
-   opacity: 0.7;
-   bottom: 20px;
-   animation: animate 3s linear infinite;
- }
- 
- @keyframes animateWaves {
-   0% {
-     background-position-x: 1000px;
-   }
-   100% {
-     background-positon-x: 0px;
-   }
- }
- 
- @keyframes animate {
-   0% {
-     background-position-x: -1000px;
-   }
-   100% {
-     background-positon-x: 0px;
-   }}
+ .footer {
+  position: relative;
+  background-color: #1a2f44; /* Base background */
+  padding: 40px 0;
+  text-align: center;
+  color: white;
+}
+
+.footer::before {
+  content: "";
+  position: absolute;
+  top: -50px; /* Adjust the height of the gradient */
+  left: -10%;
+  width: 120%;
+  height: 80px; /* Adjust gradient thickness */
+  background: linear-gradient(
+    to bottom, 
+    rgb(23, 104, 89), 
+    rgba(26, 47, 68, 1),
+    rgba(26, 47, 68)
+  );
+  filter: blur(20px); 
+  z-index: -1;
+}
